[package]
name = "minigun"
description = "HTTP load testing from pcap (tcpdump) files"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
readme = "README.md"
repository = "https://github.com/kinkard/minigun"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1"
capnp = "0.25"
clap = { version = "4", features = ["derive"] }
flume = { version = "0.12", default-features = false }
pcap-parser = "0.16"
reqwest = { version = "0.13", default-features = false }
rustc-hash = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
capnpc = "0.25"

[dev-dependencies]
pretty_assertions = "1"
